# rrtype

./: .readthedocs.yaml  CMakeLists.txt  README.md  clang-format.txt
Client/: Client.hpp  a.out  main.cpp
Engine/: Asserts.hpp  Bitflag.hpp  BuildTarget.cpp  BuildTarget.hpp  CMakeLists.txt  Core.hpp  Doxyfile  Engine.cpp  Engine.hpp  EngineObject.hpp  Entity.cpp  Entity.hpp  FixedSizeString.hpp  Math.hpp  NetRoles.cpp  NetRoles.hpp  Player.cpp  Player.hpp  Random.cpp  Random.hpp  Readme.md  Rect.hpp  Registry.cpp  Registry.hpp  Stacktrace.cpp  Stacktrace.hpp  Types.hpp  World.cpp  World.hpp  build.sh  cpp.hint  main.cpp
Engine/Assets/: Sound.lua  Sprite.lua  Text.lua
Engine/Commons/: Systems.cpp  Systems.hpp
Engine/Commons/Components/: Collider.cpp  Collider.hpp  RigidBody.cpp  RigidBody.hpp  Scroll.cpp  Scroll.hpp  Transform.cpp  Transform.hpp  VelocityComponent.cpp  VelocityComponent.hpp
Engine/Containers/: Association.cpp  Association.hpp  Buffer.cpp  Buffer.hpp  Dictionary.cpp  Dictionary.hpp  SparseArray.cpp  SparseArray.hpp
Engine/Exceptions/: Exception.cpp  Exception.hpp
Engine/GeneriqueEntity/: ButtonEntity.cpp  GeneriqueComponent.hpp  InputEntity.cpp
Engine/Hashing/: Hash.cpp  Hash.hpp  IHashable.cpp  IHashable.hpp
Engine/Level/: ILevel.hpp  Level.cpp  Level.hpp
Engine/Logging/: DefaultLogger.cpp  DefaultLogger.hpp  ILogger.hpp
Engine/Module/: IModule.hpp  ModuleInfo.cpp  ModuleInfo.hpp
Engine/Network/: INetwork.cpp  INetwork.h  NetId.cpp  NetId.hpp  NetReliability.cpp  NetReliability.hpp  ObjectReplicator.cpp  ObjectReplicator.hpp
Engine/Network/ABN/: README.md
Engine/Network/ABN/includes/: Abn.hpp  Server.hpp
Engine/Network/ABN/sources/Client/: Client.cpp  Is.cpp  Listen.cpp  Send.cpp  SetGet.cpp
Engine/Network/ABN/sources/Server/: Is.cpp  Listen.cpp  Send.cpp  Server.cpp  SetGet.cpp
Engine/Network/Packets/: DestroyEntity.cpp  DestroyEntity.hpp  EnableEntityPacket.cpp  EnableEntityPacket.h  NetPacket.cpp  NetPacket.hpp  ReplicateProperty.cpp  ReplicateProperty.hpp  Rpc.cpp  Rpc.hpp  SeamlessTravel.cpp  SeamlessTravel.hpp  SpawnEntity.cpp  SpawnEntity.hpp
Engine/Physics/: GravitySettings.cpp  GravitySettings.hpp
Engine/Reflection/: Class.cpp  Class.hpp  Property.cpp  Property.hpp  Reflection.hpp  Rpc.cpp  Rpc.hpp
Engine/Rendering/: IRenderer.hpp
Engine/Room/: RoomData.cpp  RoomData.hpp  RoomPacket.hpp
Engine/System/: Query.cpp  Query.hpp  System.cpp  System.hpp  SystemTypes.hpp
Engine/Vector/: Vector2.hpp  Vector3.hpp
Engine/display/: IDisplay.hpp  main.cpp
Engine/display/Lua/: Lua.cpp  Lua.hpp
Engine/display/sfml/: SfmlDisplay.cpp  SfmlDisplay.hpp  SfmlEncap.cpp
Network/: .gitignore  CMakeLists.txt  Doxyfile
Network/Annexe/: client.cpp  main.cpp  server.cpp
Network/Documentation/: rfc_abn.txt  rfc_mge.txt
Network/Test/: CMakeLists.txt  unit_test.cc
Network/includes/: Abn.hpp  Client.hpp  Misc.hpp  Server.hpp
Network/sources/Client/: CMakeLists.txt  Client.cpp  Is.cpp  Listen.cpp  Send.cpp  SetGet.cpp
Network/sources/Server/: CMakeLists.txt  Is.cpp  Listen.cpp  Send.cpp  Server.cpp  SetGet.cpp
Server/: a.out  main.cpp
Tekken/: CMakeLists.txt
Tekken/Assets/: Sound.lua  Sprite.lua
Tekken/Client/: CreditLevel.cpp  CreditLevel.hpp  EndGameLevel.cpp  EndGameLevel.hpp  GameLevel.cpp  GameLevel.hpp  LoadingLevel.cpp  LoadingLevel.hpp  LobbyLevel.cpp  LobbyLevel.hpp  RomSet.cpp  RomSet.hpp  SetServerAddr.cpp  SetServerAddr.hpp  Settings.cpp  Settings.hpp
Tekken/Component/: Attack.cpp  AutoDestroy.cpp  Background.cpp  ComponentTekken.hpp  Enemy.cpp  Jump.cpp  Projectile.cpp  SpaceShip.cpp  TekkenUtils.cpp
Tekken/LevelConfiguration/: GameConf.lua  stage01.lua  stage02.lua  stage03.lua  stage04.lua
Tekken/Network/: ClientNetworkReceiver.cpp  ClientNetworkSend.cpp  GameNetwork.hpp  GameNetworkEnum.hpp  NetworkReceiver.cpp  ServerNetworkReceiver.cpp  ServerNetworkSend.cpp
Tekken/Server/: ServerGame.cpp  ServerGame.hpp  ServerGameLuaScript.cpp  ServerGameSender.cpp  ServerLobby.cpp  ServerLobby.hpp
Tekken/Systems/: Systems.cpp  Systems.h
docs/: RTYPE.md  mkdocs.yml
docs/docs/: ABN.md  ENGINE.md  README.md
rtype/: readme.md
rtype/Client/: CreditLevel.cpp  CreditLevel.hpp  EndGameLevel.cpp  EndGameLevel.hpp  GameLevel.cpp  GameLevel.hpp  LoadingLevel.cpp  LoadingLevel.hpp  LobbyLevel.cpp  LobbyLevel.hpp  RomSet.cpp  RomSet.hpp  SetServerAddr.cpp  SetServerAddr.hpp  Settings.cpp  Settings.hpp
rtype/LevelConfiguration/: GameConf.lua  stage01.lua  stage02.lua  stage03.lua  stage04.lua
rtype/Network/: ClientNetworkReceiver.cpp  ClientNetworkSend.cpp  GameNetwork.hpp  GameNetworkEnum.hpp  NetworkReceiver.cpp  ServerNetworkReceiver.cpp  ServerNetworkSend.cpp
rtype/Systems/: Systems.h
rtype/component/: AutoDestroy.cpp  Background.cpp  Enemy.cpp  EnemyProjectile.cpp  Life.cpp  Projectile.cpp  ProjectileAnimation.cpp  Score.cpp  SpaceShip.cpp  SystemeComponent.hpp  r-type-utils-for-systeme.cpp
rtype/server/: ServerGame.cpp  ServerGame.hpp  ServerGameLuaScript.cpp  ServerGameSender.cpp  ServerLobby.cpp  ServerLobby.hpp
